--- a/SampleApp/build.gradle
+++ b/SampleApp/build.gradle
@@ -1,14 +1,15 @@
 buildscript {
     repositories {
+        google()
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.3.0'
+        classpath 'com.android.tools.build:gradle:4.1.3'
     }
 }
 
 repositories {
-    jcenter()
+    google()
     maven {
         url "https://jitpack.io"
     }
@@ -17,16 +18,21 @@ repositories {
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 25
-    buildToolsVersion "25.0.2"
+    compileSdkVersion rootProject.ext.sdkVersion
+    buildToolsVersion rootProject.ext.buildToolsVersion
 
     defaultConfig {
         applicationId "io.card.development"
-        minSdkVersion 18
-        targetSdkVersion 25
+        minSdkVersion 23
+        targetSdkVersion 30
         versionCode 1
         versionName "1.0.0"
         testInstrumentationRunner 'android.support.test.runner.AndroidJUnitRunner'
+
+        ndk {
+            abiFilters 'armeabi-v7a', 'arm64-v8a'
+        }
+
     }
 
     buildTypes {
@@ -39,22 +45,18 @@ android {
     android.applicationVariants.all { variant ->
         variant.outputs.each { output ->
             def outputFile = output.outputFile
+
             if (outputFile != null && outputFile.name.endsWith('.apk')) {
-                output.outputFile = new File(outputFile.parent, "card.io-sample-app-${variant.name}.apk")
+                output.outputFileName = "card.io-sample-app-${variant.name}.apk"
             }
         }
     }
 }
 
 dependencies {
-    if (parent != null) {
-        compile project(':card.io')
-    } else {
-        compile 'io.card:android-sdk:REPLACE_VERSION'
-    }
+    implementation project(path: ':card.io')
+//    debugCompile 'com.squareup.leakcanary:leakcanary-android:1.4'
 
-    debugCompile 'com.squareup.leakcanary:leakcanary-android:1.4'
-
-    androidTestCompile "com.android.support.test.espresso:espresso-core:2.2.2"
-    androidTestCompile "com.github.lkorth:device-automator:01d85912ec"
+    androidTestImplementation "com.android.support.test.espresso:espresso-core:2.2.2"
+    androidTestImplementation "com.github.lkorth:device-automator:01d85912ec"
 }
