--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,10 @@
 buildscript {
     repositories {
+        google()
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.3.0'
+        classpath 'com.android.tools.build:gradle:4.1.3'
         classpath "io.codearte.gradle.nexus:gradle-nexus-staging-plugin:0.5.3"
     }
 }
@@ -11,6 +12,11 @@ buildscript {
 task assemble {}
 
 ext {
-    sdkVersion = 25
-    buildToolsVersion = '25.0.2'
+    sdkVersion = 30
+    buildToolsVersion = '30.0.3'
+    ndkVersion = "16.1.4479499"
+}
+
+repositories {
+    google()
 }
