--- a/SampleApp/gradle/wrapper/gradle-wrapper.properties
+++ b/SampleApp/gradle/wrapper/gradle-wrapper.properties
@@ -1,6 +1,6 @@
-#Mon Aug 08 16:06:32 CDT 2016
+#Wed Jun 16 15:48:30 BST 2021
 distributionBase=GRADLE_USER_HOME
+distributionUrl=https\://services.gradle.org/distributions/gradle-6.5-bin.zip
 distributionPath=wrapper/dists
-zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
-distributionUrl=https\://services.gradle.org/distributions/gradle-2.14.1-bin.zip
+zipStoreBase=GRADLE_USER_HOME
