--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,3 @@
 org.gradle.daemon=true
 org.gradle.parallel=true
-org.gradle.jvmargs=-XX:MaxPermSize=2048m -XX:+CMSClassUnloadingEnabled
-android.useDeprecatedNdk=true
+org.gradle.jvmargs=-XX:+CMSClassUnloadingEnabled
