--- a/card.io/build.gradle
+++ b/card.io/build.gradle
@@ -11,13 +11,14 @@ repositories {
 android {
     compileSdkVersion rootProject.ext.sdkVersion
     buildToolsVersion rootProject.ext.buildToolsVersion
-//    ndkVersion rootProject.ext.ndkVersion
+    ndkVersion rootProject.ext.ndkVersion
 
     defaultConfig {
         minSdkVersion 16
         targetSdkVersion rootProject.ext.sdkVersion
 
         ndk {
+            abiFilters 'armeabi-v7a','arm64-v8a'
             moduleName "cardioRecognizer"
         }
 
@@ -29,16 +30,10 @@ android {
     resourcePrefix 'cio_'
 
     externalNativeBuild {
-
         ndkBuild {
             path 'src/main/jni/Android.mk'
         }
     }
-
-//    sourceSets.main {
-//        jniLibs.srcDir 'src/main/libs' // mention your JNI lib path(where ".so" files contains)
-//        jni.srcDirs = [] //disable automatic ndk-build call
-//    }
 }
 
 dependencies {
