--- a/SampleApp/build.gradle
+++ b/SampleApp/build.gradle
@@ -10,9 +10,8 @@ buildscript {
 
 repositories {
     google()
-    maven {
-        url "https://jitpack.io"
-    }
+    maven { url "https://jitpack.io" }
+    mavenCentral()
 }
 
 apply plugin: 'com.android.application'
@@ -30,7 +29,7 @@ android {
         testInstrumentationRunner 'android.support.test.runner.AndroidJUnitRunner'
 
         ndk {
-            abiFilters 'armeabi-v7a', 'arm64-v8a'
+            abiFilters 'armeabi-v7a', 'arm64-v8a', 'x86_64'
         }
 
     }
@@ -55,8 +54,8 @@ android {
 
 dependencies {
     implementation project(path: ':card.io')
-//    debugCompile 'com.squareup.leakcanary:leakcanary-android:1.4'
-
+//   debugCompile 'com.squareup.leakcanary:leakcanary-android:1.4'
+    implementation "ai.eye2you:opencv-android:4.5.2"
     androidTestImplementation "com.android.support.test.espresso:espresso-core:2.2.2"
     androidTestImplementation "com.github.lkorth:device-automator:01d85912ec"
 }
