--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,7 @@ ext {
     sdkVersion = 30
     buildToolsVersion = '30.0.3'
     ndkVersion = "21.3.6528147"
+    useWholeOpenCV = true
 }
 
 repositories {
