--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,9 @@ buildscript {
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:4.1.3'
-        classpath "io.codearte.gradle.nexus:gradle-nexus-staging-plugin:0.5.3"
+        //classpath "io.codearte.gradle.nexus:gradle-nexus-staging-plugin:0.5.3"
+        classpath "com.vanniktech:gradle-maven-publish-plugin:0.13.0"
+
     }
 }
 
